--- a/package.json
+++ b/package.json
@@ -3,14 +3,37 @@
   "type": "module",
   "private": true,
   "scripts": {
-    "build": "slidev build",
-    "dev": "slidev --open",
-    "export": "slidev export"
+    "build": "slidev build ai.md",
+    "dev": "slidev ai --open",
+    "export": "slidev export ai.md"
   },
   "dependencies": {
     "@slidev/cli": "^0.48.2",
     "@slidev/theme-default": "latest",
     "@slidev/theme-seriph": "latest",
     "vue": "^3.4.21"
+  },
+  "devDependencies": {
+    "playwright-chromium": "^1.42.1",
+    "prettier": "^3.2.5",
+    "prettier-plugin-slidev": "^1.0.5",
+    "typescript": "^4.4.4"
+  },
+  "prettier": {
+    "overrides": [
+      {
+        "files": [
+          "ai.md",
+          "slides.md",
+          "pages/*.md"
+        ],
+        "options": {
+          "parser": "slidev",
+          "plugins": [
+            "prettier-plugin-slidev"
+          ]
+        }
+      }
+    ]
   }
 }
