--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "scripts": {
     "build": "slidev build ai.md",
     "dev": "slidev ai --open",
-    "export": "slidev export ai.md"
+    "export": "slidev export ai.md",
+    "ppt": "slidev export ai.md --format pptx"
   },
   "dependencies": {
-    "@slidev/cli": "^0.48.2",
+    "@slidev/cli": "^0.49.5",
     "@slidev/theme-default": "latest",
     "@slidev/theme-seriph": "latest",
     "vue": "^3.4.21"
