--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,8 @@ jobs:
         run: npm install
 
       - name: Build
-        run: npm run build -- --base /${{github.event.repository.name}}/
+        # run: npm run build -- --base /${{github.event.repository.name}}/
+        run: npm run build
 
       - uses: actions/configure-pages@v4
 
