--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Build
         # run: npm run build -- --base /${{github.event.repository.name}}/
-        run: npm run build
+        run: npm run build ${{github.event.repository.name}}
 
       - uses: actions/configure-pages@v4
 
