--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
   "scripts": {
     "build": "./build.sh",
     "build-cli": "slidev build",
-    "dev": "slidev ai.md --open",
+    "dev": "slidev ./pages/headless-ui.md --open",
     "format": "slidev format ai.md",
     "export": "slidev export ai.md slides.md",
     "ppt": "slidev export ai.md slides.md --format pptx"
   },
   "dependencies": {
-    "@slidev/cli": "^0.49.9",
+    "@slidev/cli": "^0.49.10",
     "@slidev/theme-default": "latest",
     "@slidev/theme-seriph": "latest",
+    "unocss": "^0.61.0",
     "vue": "^3.4.21"
   },
   "devDependencies": {
