--- a/package.json
+++ b/package.json
@@ -5,15 +5,17 @@
   "scripts": {
     "build": "./build.sh",
     "build-cli": "slidev build",
-    "dev": "slidev ./pages/headless-ui.md --open",
+    "dev": "slidev headless-ui.md --open",
     "format": "slidev format ai.md",
     "export": "slidev export ai.md slides.md",
     "ppt": "slidev export ai.md slides.md --format pptx"
   },
   "dependencies": {
+    "@iconify/vue": "^4.1.2",
     "@slidev/cli": "^0.49.10",
     "@slidev/theme-default": "latest",
     "@slidev/theme-seriph": "latest",
+    "radix-vue": "^1.8.3",
     "unocss": "^0.61.0",
     "vue": "^3.4.21"
   },
