--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "files": [
           "ai.md",
           "slides.md",
+          "headless-ui.md",
           "pages/*.md"
         ],
         "options": {
