--- a/package.json
+++ b/package.json
@@ -5,25 +5,25 @@
   "scripts": {
     "build": "./build.sh",
     "build-cli": "slidev build",
-    "dev": "slidev headless-ui.md --open",
+    "dev": "slidev ai.md --open",
     "format": "slidev format ai.md",
     "export": "slidev export ai.md slides.md",
     "ppt": "slidev export ai.md slides.md --format pptx"
   },
   "dependencies": {
     "@iconify/vue": "^4.1.2",
-    "@slidev/cli": "^0.49.11",
+    "@slidev/cli": "^0.49.16",
     "@slidev/theme-default": "latest",
     "@slidev/theme-seriph": "latest",
-    "radix-vue": "^1.8.4",
-    "unocss": "^0.61.0",
-    "vue": "^3.4.29"
+    "radix-vue": "^1.9.0",
+    "unocss": "^0.61.3",
+    "vue": "^3.4.31"
   },
   "devDependencies": {
-    "playwright-chromium": "^1.44.1",
+    "playwright-chromium": "^1.45.1",
     "prettier": "^3.3.2",
     "prettier-plugin-slidev": "^1.0.5",
-    "typescript": "^5.5.2"
+    "typescript": "^5.5.3"
   },
   "prettier": {
     "overrides": [
