--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "dev": "slidev ai.md --open",
     "format": "slidev format ai.md",
     "export": "slidev export ai.md slides.md",
-    "ppt": "slidev export ai.md slides.md --format pptx"
+    "ppt": "slidev export ai.md --format pptx"
   },
   "dependencies": {
     "@iconify/vue": "^4.1.2",
-    "@slidev/cli": "^0.49.16",
+    "@slidev/cli": "^0.49.17",
     "@slidev/theme-default": "latest",
     "@slidev/theme-seriph": "latest",
     "radix-vue": "^1.9.0",
